# PICOPROJECT

./: CMakeLists.txt  PicoProject.sln  PicoProject.vgdbproj
.visualgdb/CodeDB/PicoProject.vgdbproj-Debug-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  adxl355.hpa00  adxl355.hpd  adxl355.npa00  adxl355.npd  adxl355.rdb  altcp_tls_mbedtls-00001.npa01  altcp_tls_mbedtls-00001.npd  altcp_tls_mbedtls.npa00  codedb.lck  cyw43_ctrl.npa00  cyw43_ctrl.npd  gpio-00001.npa00  gpio-00001.npd  gpio-00001.rdb  i2c.npa00  i2c.npd  i2c.rdb  kemetVibrationSensor.npa00  kemetVibrationSensor.npd  kemetVibrationSensor.rdb  kemetVibrationSnesor.npa00  lwiperf.npa00  mma8451_i2c.npa00  mqtt-00001.npa00  mqtt-00001.npd  mqtt-00001.rdb  mqtt.npa00  mqtt.npd  pico_mbedtls.npa00  pico_mbedtls.npd  pico_mbedtls.rdb  random.npa00  random.npd  ssl_tls.rdb  time.npa00  time.npd  time.rdb  tmp00000001.npa00  (+66 more)
.visualgdb/CodeDB/PicoProject.vgdbproj-Debug-VisualGDB.0001/: codedb.lck
.visualgdb/CodeDB/PicoProject.vgdbproj-Debug-VisualGDB/AutoPCH/: 1177c.ast  1177c.psf  191c.ast  191c.psf  365c.ast  365c.psf  37c.ast  37c.psf  38c.ast  38c.psf  944c.ast  944c.psf  965c.ast  965c.psf
.visualgdb/CodeDB/PicoProject.vgdbproj-Debug-VisualGDB/GlobalCache/000/: Files.idx  Names.idx
.visualgdb/VisualGDBCache/PicoProject-Debug-VisualGDB/: ImplicitCompilerFlags.xml  UpToDateChecklist.db
.visualgdb/VisualGDBCache/PicoProject-Debug-VisualGDB/CodeModelCache/: CodeModelIndex.txt  cache-v2-5492a7740cda7d36166f.json  cmakeFiles-v1-d3aaba51a5190bf54c85.json  codemodel-v2-d33da49a65c350d10e64.json  index-2023-03-13T11-54-18-0128.json  target-adxl355-DEBUG-7f6dbdfb02de4182c652.json  target-bs2_default-DEBUG-346797b0a76e77a6c518.json  target-bs2_default_bin-DEBUG-f84f6e0f02c82b0c6552.json  target-bs2_default_padded_checksummed_asm-DEBUG-e65650b15de2362f8450.json  target-cyw43_driver_picow_cyw43_bus_pio_spi_pio_h-DEBUG-0497deddbb9b206fb7cf.json  target-kemetVibrationSensor-DEBUG-4898bb6f920d5c974d58.json
adxl355/: CMakeLists.txt  adxl355.c
kemet/: CMakeLists.txt  crypto_consts_example.h  kemetVibrationSensor.c  lwipopts.h
